ros2_ws/log/build_2023-04-13_11-05-18/autoro_navigation/stderr.log
  File "/home/mshen/ros2_ws/install/autoro_navigation/lib/python3.10/site-packages/autoro_navigation/navigation_node.py", line 11
    'costmap'
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

